--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
     "file-saver": "^2.0.5",
@@ -18,7 +18,8 @@
     "jspdf-autotable": "^5.0.2",
     "proyecto2030": "file:",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
+    "react-awesome-reveal": "^4.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
